--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,9 +66,21 @@
         android:layout_alignStart="@+id/button"
         android:layout_below="@+id/button"
         android:layout_marginTop="25dp"
+        android:onClick="modul2"
         android:textColor="#F0F8FF"
         android:background="#B22222"
         android:text="MODUL 2" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:layout_alignStart="@+id/button2"
+        android:layout_below="@+id/button2"
+        android:layout_marginTop="26dp"
+        android:background="#B22222"
+        android:onClick="modul3"
+        android:text="MODUL 3"
+        android:textColor="#F0F8FF" />
 
 </RelativeLayout>
