--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,11 +65,11 @@
         android:layout_height="30dp"
         android:layout_alignStart="@+id/button"
         android:layout_below="@+id/button"
-        android:layout_marginTop="25dp"
-        android:onClick="modul2"
-        android:textColor="#F0F8FF"
+        android:layout_marginTop="12dp"
         android:background="#B22222"
-        android:text="MODUL 2" />
+        android:onClick="modul2"
+        android:text="MODUL 2"
+        android:textColor="#F0F8FF" />
 
     <Button
         android:id="@+id/button3"
@@ -77,7 +77,7 @@
         android:layout_height="30dp"
         android:layout_alignStart="@+id/button2"
         android:layout_below="@+id/button2"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="13dp"
         android:background="#B22222"
         android:onClick="modul3"
         android:text="MODUL 3"
@@ -89,10 +89,59 @@
         android:layout_height="30dp"
         android:layout_alignStart="@+id/button3"
         android:layout_below="@+id/button3"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="11dp"
         android:background="#B22222"
         android:onClick="modul4"
         android:text="MODUL 4"
+        android:textColor="#F0F8FF" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:layout_alignStart="@+id/button4"
+        android:layout_below="@+id/button4"
+        android:layout_marginTop="12dp"
+        android:background="#B22222"
+        android:onClick="modul5"
+        android:text="MODUL 5"
+        android:textColor="#F0F8FF" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:layout_alignStart="@+id/button5"
+        android:layout_below="@+id/button5"
+        android:layout_marginTop="12dp"
+        android:background="#B22222"
+        android:onClick="modul6"
+        android:text="MODUL 6"
+        android:textColor="#F0F8FF" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:layout_alignStart="@+id/button6"
+        android:layout_below="@+id/button6"
+        android:layout_marginTop="13dp"
+        android:background="#B22222"
+        android:onClick="modul7"
+        android:text="MODUL 7"
+        android:textColor="#F0F8FF" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+
+        android:layout_alignStart="@+id/button7"
+        android:layout_below="@+id/button7"
+        android:layout_marginTop="11dp"
+        android:background="#B22222"
+        android:onClick="modul8"
+        android:text="MODUL 8"
         android:textColor="#F0F8FF" />
 
 </RelativeLayout>
